a bit of word smithing... I think this is better, bit it may need some more work later.

--- a/er/4-overview.adoc
+++ b/er/4-overview.adoc
@@ -11,10 +11,10 @@ The following clauses (clause-requirements, clause-solutions, clauses 6-n and An
 
 The ELFIE is intended to test existing OGC and W3C standards with the goal of establishing a best practice for exposing links between and among environmental domain and sampling features.  
 The IE is focused on two cross-domain use cases: 1) exposing topological and domain feature model relationships between features and 2) description of sampling data available for and linked to sampled domain features 
-While addressing these use cases, the IE will strive to address issues of encoding data that would be passed between systems. 
-The encodings developed are expected to support archictures surrounding linked data catalogs and registries. 
-For example, data providers can use the encodings as a way to advertise their monitoring or domain features to catalogs or other applications that want to crawl and index available data. 
-Similarly, integrated catalogs that index and construct links between features can use the encodings as a linked data response to search queries. 
+While addressing these use cases, the IE will strive to address issues of encoding data as specific views of a linked data graph that would be passed between systems. 
+These linked data graph views are expected to support archictures involving linked data catalogs and registries. 
+For example, data providers can use the linked data graph views as a way to advertise their monitoring or domain features to catalogs or other applications that want to crawl and index available data. 
+Similarly, integrated catalogs that index and construct links between features can use the views as a linked data response to search queries. 
 
 Current OGC services, while flexible and capable, do not allow exposure of features in a resource oriented way and provide opaque interfaces to structured and/or inter-related content. 
 The encodings demonstrated in ELFIE turn the normal OGC service pattern (GetCapabilities followed by introspection to understand contents) inside out by encoding associations between features as linked data predicates. 
